force-app/main/default/objects/Circles__c/Circles__c.object-meta.xml
<CustomObject>
    <label>Circles</label>
    <nameField>
        <label>Telecom Circle</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Circles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>