force-app/main/default/objects/Circles__c/fields/Area_Type__c.field-meta.xml
<CustomField>
    <fullName>Area_Type__c</fullName>
    <label>Area Type</label>
    <length>32</length>
    <type>Text</type>
</CustomField>