force-app/main/default/objects/Circles__c/fields/CircleCode__c.field-meta.xml
<CustomField>
    <fullName>CircleCode__c</fullName>
    <label>Circle Code</label>
    <length>32</length>
    <type>Text</type>
</CustomField>