force-app/main/default/objects/Circles__c/fields/Circlehead__c.field-meta.xml
<CustomField>
    <fullName>Circlehead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is used to capture the circle Head</description>
    <label>Circle Head (OQH)</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles</relationshipName>
    <type>Lookup</type>
</CustomField>