force-app/main/default/objects/Circles__c/fields/Ndh__c.field-meta.xml
<CustomField>
    <fullName>Ndh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NDH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles2</relationshipName>
    <type>Lookup</type>
</CustomField>