force-app/main/default/objects/Circles__c/fields/Nqh__c.field-meta.xml
<CustomField>
    <fullName>Nqh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>NQH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles3</relationshipName>
    <type>Lookup</type>
</CustomField>