force-app/main/default/objects/Circles__c/fields/Roh__c.field-meta.xml
<CustomField>
    <fullName>Roh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ROH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles1</relationshipName>
    <type>Lookup</type>
</CustomField>