force-app/main/default/objects/Circles__c/fields/Rsh__c.field-meta.xml
<CustomField>
    <fullName>Rsh__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>RSH</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles4</relationshipName>
    <type>Lookup</type>
</CustomField>