force-app/main/default/objects/Circles__c/fields/Saleshead__c.field-meta.xml
<CustomField>
    <fullName>Saleshead__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles5</relationshipName>
    <type>Lookup</type>
</CustomField>