force-app/main/default/objects/Circles__c/fields/Scm__c.field-meta.xml
<CustomField>
    <fullName>Scm__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>SCM</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Circles6</relationshipName>
    <type>Lookup</type>
</CustomField>