force-app/main/default/objects/Circles__c/fields/Telecom_Circle__c.field-meta.xml
<CustomField>
    <fullName>Telecom_Circle__c</fullName>
    <label>Telecom Circle</label>
    <length>32</length>
    <type>Text</type>
</CustomField>