force-app/main/default/objects/Circles__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Telecom_Circle__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>